project02/yacc.output
Terminals unused in grammar

    SEMICOLON
    LB
    RB
    CHAR
    DEFAULT
    DO
    FAL
    TRU


State 1 conflicts: 1 shift/reduce
State 25 conflicts: 11 shift/reduce
State 44 conflicts: 1 reduce/reduce
State 45 conflicts: 1 reduce/reduce
State 82 conflicts: 1 reduce/reduce
State 98 conflicts: 13 reduce/reduce
State 101 conflicts: 1 shift/reduce
State 158 conflicts: 1 reduce/reduce
State 159 conflicts: 1 reduce/reduce


Grammar

    0 $accept: init $end

    1 init: program

    2 program: %empty
    3        | declarations program
    4        | statement_sequence program

    5 declarations: const_declarations
    6             | array_declarations
    7             | variable_declarations
    8             | function_declarations
    9             | procedure_declarations

   10 type: STR
   11     | INT
   12     | REAL
   13     | BOOL

   14 $@1: %empty

   15 function_declarations: FUNCTION IDENTIFIER LP formal_arguments RP COLON type $@1 description END IDENTIFIER

   16 $@2: %empty

   17 function_declarations: FUNCTION IDENTIFIER LP RP COLON type $@2 description END IDENTIFIER

   18 $@3: %empty

   19 procedure_declarations: PROCEDURE IDENTIFIER LP formal_arguments RP $@3 description END IDENTIFIER

   20 $@4: %empty

   21 procedure_declarations: PROCEDURE IDENTIFIER LP RP $@4 description END IDENTIFIER

   22 formal_arguments: args

   23 args: IDENTIFIER COLON type
   24     | IDENTIFIER COLON type COMMA args

   25 const_declarations: CONST IDENTIFIER COLON type ASSIGN const_expression
   26                   | CONST IDENTIFIER ASSIGN const_expression

   27 variable_declarations: VAR IDENTIFIER ASSIGN const_expression
   28                      | VAR IDENTIFIER COLON type ASSIGN const_expression
   29                      | VAR IDENTIFIER COLON type

   30 array_declarations: VAR IDENTIFIER COLON ARRAY INTEGER DOT DOT INTEGER OF type

   31 statement_sequence: statements
   32                   | statements statement_sequence

   33 statements: block
   34           | simple
   35           | conditional
   36           | loop
   37           | procedure_invocation

   38 $@5: %empty

   39 block: BYG $@5 description END
   40      | BYG END

   41 simple: IDENTIFIER ASSIGN expressions
   42       | IDENTIFIER LMB expressions RMB ASSIGN expressions
   43       | PUT expressions
   44       | GET IDENTIFIER
   45       | RESULT expressions
   46       | RETURN
   47       | EXIT WHEN boolean_expression
   48       | EXIT
   49       | SKIP

   50 expressions: operand_expression
   51            | LP expressions RP
   52            | operand_expression LT operand_expression
   53            | operand_expression LET operand_expression
   54            | operand_expression EQ operand_expression
   55            | operand_expression GETH operand_expression
   56            | operand_expression GT operand_expression
   57            | operand_expression NEQ operand_expression

   58 operand_expression: operand_term
   59                   | operand_expression OR operand_expression
   60                   | operand_expression AND operand_expression
   61                   | NOT operand_expression
   62                   | operand_expression ADD operand_expression
   63                   | operand_expression SUB operand_expression
   64                   | operand_expression MUL operand_expression
   65                   | operand_expression DIV operand_expression
   66                   | operand_expression MOD operand_expression
   67                   | SUB operand_expression

   68 procedure_invocation: IDENTIFIER LP arguments RP
   69                     | IDENTIFIER LP RP

   70 operand_term: IDENTIFIER LP arguments RP
   71             | IDENTIFIER LP RP
   72             | IDENTIFIER LMB operand_expression RMB
   73             | LP operand_expression RP
   74             | STRING
   75             | INTEGER
   76             | FLOAT
   77             | BOOLEAN
   78             | IDENTIFIER

   79 arguments: expressions
   80          | expressions COMMA arguments

   81 $@6: %empty

   82 $@7: %empty

   83 $@8: %empty

   84 conditional: IF boolean_expression THEN $@6 description $@7 ELSE $@8 description END IF

   85 $@9: %empty

   86 conditional: IF boolean_expression THEN $@9 description END IF

   87 boolean_expression: LP boolean_expression RP
   88                   | operand_expression LT operand_expression
   89                   | operand_expression LET operand_expression
   90                   | operand_expression EQ operand_expression
   91                   | operand_expression GETH operand_expression
   92                   | operand_expression GT operand_expression
   93                   | operand_expression NEQ operand_expression
   94                   | operand_expression OR operand_expression
   95                   | operand_expression AND operand_expression
   96                   | NOT operand_expression
   97                   | IDENTIFIER
   98                   | BOOLEAN

   99 description: %empty
  100            | const_declarations description
  101            | variable_declarations description
  102            | statement_sequence description

  103 $@10: %empty

  104 loop: LOOP $@10 description END LOOP

  105 $@11: %empty

  106 loop: FOR DECREASING IDENTIFIER COLON const_expression DOT DOT const_expression $@11 description END FOR

  107 $@12: %empty

  108 loop: FOR IDENTIFIER COLON const_expression DOT DOT const_expression $@12 description END FOR

  109 const_expression: STRING
  110                 | INTEGER
  111                 | FLOAT
  112                 | BOOLEAN
  113                 | IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ASSIGN (258) 25 26 27 28 41 42
    DOT (259) 30 106 108
    COMMA (260) 24 80
    COLON (261) 15 17 23 24 25 28 29 30 106 108
    SEMICOLON (262)
    LP (263) 15 17 19 21 51 68 69 70 71 73 87
    RP (264) 15 17 19 21 51 68 69 70 71 73 87
    LMB (265) 42 72
    RMB (266) 42 72
    LB (267)
    RB (268)
    MOD (269) 66
    ADD (270) 62
    SUB (271) 63 67
    MUL (272) 64
    DIV (273) 65
    LT (274) 52 88
    LET (275) 53 89
    GETH (276) 55 91
    GT (277) 56 92
    EQ (278) 54 90
    NEQ (279) 57 93
    AND (280) 60 95
    OR (281) 59 94
    NOT (282) 61 96
    ARRAY (283) 30
    BYG (284) 39 40
    BOOL (285) 13
    CHAR (286)
    CONST (287) 25 26
    DECREASING (288) 106
    DEFAULT (289)
    DO (290)
    ELSE (291) 84
    END (292) 15 17 19 21 39 40 84 86 104 106 108
    EXIT (293) 47 48
    FAL (294)
    FOR (295) 106 108
    FUNCTION (296) 15 17
    GET (297) 44
    IF (298) 84 86
    INT (299) 11
    LOOP (300) 104
    OF (301) 30
    PUT (302) 43
    PROCEDURE (303) 19 21
    REAL (304) 12
    RESULT (305) 45
    RETURN (306) 46
    SKIP (307) 49
    STR (308) 10
    THEN (309) 84 86
    TRU (310)
    VAR (311) 27 28 29 30
    WHEN (312) 47
    INTEGER <int_val> (313) 30 75 110
    FLOAT <float_val> (314) 76 111
    BOOLEAN <bool_val> (315) 77 98 112
    IDENTIFIER <variable> (316) 15 17 19 21 23 24 25 26 27 28 29 30 41 42 44 68 69 70 71 72 78 97 106 108 113
    STRING <str_val> (317) 74 109
    UMINUS (318)


Nonterminals, with rules where they appear

    $accept (64)
        on left: 0
    init (65)
        on left: 1
        on right: 0
    program (66)
        on left: 2 3 4
        on right: 1 3 4
    declarations (67)
        on left: 5 6 7 8 9
        on right: 3
    type <typical_type> (68)
        on left: 10 11 12 13
        on right: 15 17 23 24 25 28 29 30
    function_declarations (69)
        on left: 15 17
        on right: 8
    $@1 (70)
        on left: 14
        on right: 15
    $@2 (71)
        on left: 16
        on right: 17
    procedure_declarations (72)
        on left: 19 21
        on right: 9
    $@3 (73)
        on left: 18
        on right: 19
    $@4 (74)
        on left: 20
        on right: 21
    formal_arguments <argument_list> (75)
        on left: 22
        on right: 15 19
    args <argument_list> (76)
        on left: 23 24
        on right: 22 24
    const_declarations (77)
        on left: 25 26
        on right: 5 100
    variable_declarations (78)
        on left: 27 28 29
        on right: 7 101
    array_declarations (79)
        on left: 30
        on right: 6
    statement_sequence (80)
        on left: 31 32
        on right: 4 32 102
    statements (81)
        on left: 33 34 35 36 37
        on right: 31 32
    block (82)
        on left: 39 40
        on right: 33
    $@5 (83)
        on left: 38
        on right: 39
    simple (84)
        on left: 41 42 43 44 45 46 47 48 49
        on right: 34
    expressions <expr_result> (85)
        on left: 50 51 52 53 54 55 56 57
        on right: 41 42 43 45 51 79 80
    operand_expression <expr_result> (86)
        on left: 58 59 60 61 62 63 64 65 66 67
        on right: 50 52 53 54 55 56 57 59 60 61 62 63 64 65 66 67 72 73 88 89 90 91 92 93 94 95 96
    procedure_invocation <expr_result> (87)
        on left: 68 69
        on right: 37
    operand_term <expr_result> (88)
        on left: 70 71 72 73 74 75 76 77 78
        on right: 58
    arguments <argument_list> (89)
        on left: 79 80
        on right: 68 70 80
    conditional (90)
        on left: 84 86
        on right: 35
    $@6 (91)
        on left: 81
        on right: 84
    $@7 (92)
        on left: 82
        on right: 84
    $@8 (93)
        on left: 83
        on right: 84
    $@9 (94)
        on left: 85
        on right: 86
    boolean_expression <expr_result> (95)
        on left: 87 88 89 90 91 92 93 94 95 96 97 98
        on right: 47 84 86 87
    description (96)
        on left: 99 100 101 102
        on right: 15 17 19 21 39 84 86 100 101 102 104 106 108
    loop (97)
        on left: 104 106 108
        on right: 36
    $@10 (98)
        on left: 103
        on right: 104
    $@11 (99)
        on left: 105
        on right: 106
    $@12 (100)
        on left: 107
        on right: 108
    const_expression <expr_result> (101)
        on left: 109 110 111 112 113
        on right: 25 26 27 28 106 108


State 0

    0 $accept: . init $end

    BYG         shift, and go to state 1
    CONST       shift, and go to state 2
    EXIT        shift, and go to state 3
    FOR         shift, and go to state 4
    FUNCTION    shift, and go to state 5
    GET         shift, and go to state 6
    IF          shift, and go to state 7
    LOOP        shift, and go to state 8
    PUT         shift, and go to state 9
    PROCEDURE   shift, and go to state 10
    RESULT      shift, and go to state 11
    RETURN      shift, and go to state 12
    SKIP        shift, and go to state 13
    VAR         shift, and go to state 14
    IDENTIFIER  shift, and go to state 15

    $default  reduce using rule 2 (program)

    init                    go to state 16
    program                 go to state 17
    declarations            go to state 18
    function_declarations   go to state 19
    procedure_declarations  go to state 20
    const_declarations      go to state 21
    variable_declarations   go to state 22
    array_declarations      go to state 23
    statement_sequence      go to state 24
    statements              go to state 25
    block                   go to state 26
    simple                  go to state 27
    procedure_invocation    go to state 28
    conditional             go to state 29
    loop                    go to state 30


State 1

   39 block: BYG . $@5 description END
   40      | BYG . END

    END  shift, and go to state 31

    END       [reduce using rule 38 ($@5)]
    $default  reduce using rule 38 ($@5)

    $@5  go to state 32


State 2

   25 const_declarations: CONST . IDENTIFIER COLON type ASSIGN const_expression
   26                   | CONST . IDENTIFIER ASSIGN const_expression

    IDENTIFIER  shift, and go to state 33


State 3

   47 simple: EXIT . WHEN boolean_expression
   48       | EXIT .

    WHEN  shift, and go to state 34

    $default  reduce using rule 48 (simple)


State 4

  106 loop: FOR . DECREASING IDENTIFIER COLON const_expression DOT DOT const_expression $@11 description END FOR
  108     | FOR . IDENTIFIER COLON const_expression DOT DOT const_expression $@12 description END FOR

    DECREASING  shift, and go to state 35
    IDENTIFIER  shift, and go to state 36


State 5

   15 function_declarations: FUNCTION . IDENTIFIER LP formal_arguments RP COLON type $@1 description END IDENTIFIER
   17                      | FUNCTION . IDENTIFIER LP RP COLON type $@2 description END IDENTIFIER

    IDENTIFIER  shift, and go to state 37


State 6

   44 simple: GET . IDENTIFIER

    IDENTIFIER  shift, and go to state 38


State 7

   84 conditional: IF . boolean_expression THEN $@6 description $@7 ELSE $@8 description END IF
   86            | IF . boolean_expression THEN $@9 description END IF

    LP          shift, and go to state 39
    SUB         shift, and go to state 40
    NOT         shift, and go to state 41
    INTEGER     shift, and go to state 42
    FLOAT       shift, and go to state 43
    BOOLEAN     shift, and go to state 44
    IDENTIFIER  shift, and go to state 45
    STRING      shift, and go to state 46

    operand_expression  go to state 47
    operand_term        go to state 48
    boolean_expression  go to state 49


State 8

  104 loop: LOOP . $@10 description END LOOP

    $default  reduce using rule 103 ($@10)

    $@10  go to state 50


State 9

   43 simple: PUT . expressions

    LP          shift, and go to state 51
    SUB         shift, and go to state 40
    NOT         shift, and go to state 52
    INTEGER     shift, and go to state 42
    FLOAT       shift, and go to state 43
    BOOLEAN     shift, and go to state 53
    IDENTIFIER  shift, and go to state 54
    STRING      shift, and go to state 46

    expressions         go to state 55
    operand_expression  go to state 56
    operand_term        go to state 48


State 10

   19 procedure_declarations: PROCEDURE . IDENTIFIER LP formal_arguments RP $@3 description END IDENTIFIER
   21                       | PROCEDURE . IDENTIFIER LP RP $@4 description END IDENTIFIER

    IDENTIFIER  shift, and go to state 57


State 11

   45 simple: RESULT . expressions

    LP          shift, and go to state 51
    SUB         shift, and go to state 40
    NOT         shift, and go to state 52
    INTEGER     shift, and go to state 42
    FLOAT       shift, and go to state 43
    BOOLEAN     shift, and go to state 53
    IDENTIFIER  shift, and go to state 54
    STRING      shift, and go to state 46

    expressions         go to state 58
    operand_expression  go to state 56
    operand_term        go to state 48


State 12

   46 simple: RETURN .

    $default  reduce using rule 46 (simple)


State 13

   49 simple: SKIP .

    $default  reduce using rule 49 (simple)


State 14

   27 variable_declarations: VAR . IDENTIFIER ASSIGN const_expression
   28                      | VAR . IDENTIFIER COLON type ASSIGN const_expression
   29                      | VAR . IDENTIFIER COLON type
   30 array_declarations: VAR . IDENTIFIER COLON ARRAY INTEGER DOT DOT INTEGER OF type

    IDENTIFIER  shift, and go to state 59


State 15

   41 simple: IDENTIFIER . ASSIGN expressions
   42       | IDENTIFIER . LMB expressions RMB ASSIGN expressions
   68 procedure_invocation: IDENTIFIER . LP arguments RP
   69                     | IDENTIFIER . LP RP

    ASSIGN  shift, and go to state 60
    LP      shift, and go to state 61
    LMB     shift, and go to state 62


State 16

    0 $accept: init . $end

    $end  shift, and go to state 63


State 17

    1 init: program .

    $default  reduce using rule 1 (init)


State 18

    3 program: declarations . program

    BYG         shift, and go to state 1
    CONST       shift, and go to state 2
    EXIT        shift, and go to state 3
    FOR         shift, and go to state 4
    FUNCTION    shift, and go to state 5
    GET         shift, and go to state 6
    IF          shift, and go to state 7
    LOOP        shift, and go to state 8
    PUT         shift, and go to state 9
    PROCEDURE   shift, and go to state 10
    RESULT      shift, and go to state 11
    RETURN      shift, and go to state 12
    SKIP        shift, and go to state 13
    VAR         shift, and go to state 14
    IDENTIFIER  shift, and go to state 15

    $default  reduce using rule 2 (program)

    program                 go to state 64
    declarations            go to state 18
    function_declarations   go to state 19
    procedure_declarations  go to state 20
    const_declarations      go to state 21
    variable_declarations   go to state 22
    array_declarations      go to state 23
    statement_sequence      go to state 24
    statements              go to state 25
    block                   go to state 26
    simple                  go to state 27
    procedure_invocation    go to state 28
    conditional             go to state 29
    loop                    go to state 30


State 19

    8 declarations: function_declarations .

    $default  reduce using rule 8 (declarations)


State 20

    9 declarations: procedure_declarations .

    $default  reduce using rule 9 (declarations)


State 21

    5 declarations: const_declarations .

    $default  reduce using rule 5 (declarations)


State 22

    7 declarations: variable_declarations .

    $default  reduce using rule 7 (declarations)


State 23

    6 declarations: array_declarations .

    $default  reduce using rule 6 (declarations)


State 24

    4 program: statement_sequence . program

    BYG         shift, and go to state 1
    CONST       shift, and go to state 2
    EXIT        shift, and go to state 3
    FOR         shift, and go to state 4
    FUNCTION    shift, and go to state 5
    GET         shift, and go to state 6
    IF          shift, and go to state 7
    LOOP        shift, and go to state 8
    PUT         shift, and go to state 9
    PROCEDURE   shift, and go to state 10
    RESULT      shift, and go to state 11
    RETURN      shift, and go to state 12
    SKIP        shift, and go to state 13
    VAR         shift, and go to state 14
    IDENTIFIER  shift, and go to state 15

    $default  reduce using rule 2 (program)

    program                 go to state 65
    declarations            go to state 18
    function_declarations   go to state 19
    procedure_declarations  go to state 20
    const_declarations      go to state 21
    variable_declarations   go to state 22
    array_declarations      go to state 23
    statement_sequence      go to state 24
    statements              go to state 25
    block                   go to state 26
    simple                  go to state 27
    procedure_invocation    go to state 28
    conditional             go to state 29
    loop                    go to state 30


State 25

   31 statement_sequence: statements .
   32                   | statements . statement_sequence

    BYG         shift, and go to state 1
    EXIT        shift, and go to state 3
    FOR         shift, and go to state 4
    GET         shift, and go to state 6
    IF          shift, and go to state 7
    LOOP        shift, and go to state 8
    PUT         shift, and go to state 9
    RESULT      shift, and go to state 11
    RETURN      shift, and go to state 12
    SKIP        shift, and go to state 13
    IDENTIFIER  shift, and go to state 15

    BYG         [reduce using rule 31 (statement_sequence)]
    EXIT        [reduce using rule 31 (statement_sequence)]
    FOR         [reduce using rule 31 (statement_sequence)]
    GET         [reduce using rule 31 (statement_sequence)]
    IF          [reduce using rule 31 (statement_sequence)]
    LOOP        [reduce using rule 31 (statement_sequence)]
    PUT         [reduce using rule 31 (statement_sequence)]
    RESULT      [reduce using rule 31 (statement_sequence)]
    RETURN      [reduce using rule 31 (statement_sequence)]
    SKIP        [reduce using rule 31 (statement_sequence)]
    IDENTIFIER  [reduce using rule 31 (statement_sequence)]
    $default    reduce using rule 31 (statement_sequence)

    statement_sequence    go to state 66
    statements            go to state 25
    block                 go to state 26
    simple                go to state 27
    procedure_invocation  go to state 28
    conditional           go to state 29
    loop                  go to state 30


State 26

   33 statements: block .

    $default  reduce using rule 33 (statements)


State 27

   34 statements: simple .

    $default  reduce using rule 34 (statements)


State 28

   37 statements: procedure_invocation .

    $default  reduce using rule 37 (statements)


State 29

   35 statements: conditional .

    $default  reduce using rule 35 (statements)


State 30

   36 statements: loop .

    $default  reduce using rule 36 (statements)


State 31

   40 block: BYG END .

    $default  reduce using rule 40 (block)


State 32

   39 block: BYG $@5 . description END

    BYG         shift, and go to state 1
    CONST       shift, and go to state 2
    EXIT        shift, and go to state 3
    FOR         shift, and go to state 4
    GET         shift, and go to state 6
    IF          shift, and go to state 7
    LOOP        shift, and go to state 8
    PUT         shift, and go to state 9
    RESULT      shift, and go to state 11
    RETURN      shift, and go to state 12
    SKIP        shift, and go to state 13
    VAR         shift, and go to state 67
    IDENTIFIER  shift, and go to state 15

    $default  reduce using rule 99 (description)

    const_declarations     go to state 68
    variable_declarations  go to state 69
    statement_sequence     go to state 70
    statements             go to state 25
    block                  go to state 26
    simple                 go to state 27
    procedure_invocation   go to state 28
    conditional            go to state 29
    description            go to state 71
    loop                   go to state 30


State 33

   25 const_declarations: CONST IDENTIFIER . COLON type ASSIGN const_expression
   26                   | CONST IDENTIFIER . ASSIGN const_expression

    ASSIGN  shift, and go to state 72
    COLON   shift, and go to state 73


State 34

   47 simple: EXIT WHEN . boolean_expression

    LP          shift, and go to state 39
    SUB         shift, and go to state 40
    NOT         shift, and go to state 41
    INTEGER     shift, and go to state 42
    FLOAT       shift, and go to state 43
    BOOLEAN     shift, and go to state 44
    IDENTIFIER  shift, and go to state 45
    STRING      shift, and go to state 46

    operand_expression  go to state 47
    operand_term        go to state 48
    boolean_expression  go to state 74


State 35

  106 loop: FOR DECREASING . IDENTIFIER COLON const_expression DOT DOT const_expression $@11 description END FOR

    IDENTIFIER  shift, and go to state 75


State 36

  108 loop: FOR IDENTIFIER . COLON const_expression DOT DOT const_expression $@12 description END FOR

    COLON  shift, and go to state 76


State 37

   15 function_declarations: FUNCTION IDENTIFIER . LP formal_arguments RP COLON type $@1 description END IDENTIFIER
   17                      | FUNCTION IDENTIFIER . LP RP COLON type $@2 description END IDENTIFIER

    LP  shift, and go to state 77


State 38

   44 simple: GET IDENTIFIER .

    $default  reduce using rule 44 (simple)


State 39

   73 operand_term: LP . operand_expression RP
   87 boolean_expression: LP . boolean_expression RP

    LP          shift, and go to state 39
    SUB         shift, and go to state 40
    NOT         shift, and go to state 41
    INTEGER     shift, and go to state 42
    FLOAT       shift, and go to state 43
    BOOLEAN     shift, and go to state 44
    IDENTIFIER  shift, and go to state 45
    STRING      shift, and go to state 46

    operand_expression  go to state 78
    operand_term        go to state 48
    boolean_expression  go to state 79


State 40

   67 operand_expression: SUB . operand_expression

    LP          shift, and go to state 80
    SUB         shift, and go to state 40
    NOT         shift, and go to state 52
    INTEGER     shift, and go to state 42
    FLOAT       shift, and go to state 43
    BOOLEAN     shift, and go to state 53
    IDENTIFIER  shift, and go to state 54
    STRING      shift, and go to state 46

    operand_expression  go to state 81
    operand_term        go to state 48


State 41

   61 operand_expression: NOT . operand_expression
   96 boolean_expression: NOT . operand_expression

    LP          shift, and go to state 80
    SUB         shift, and go to state 40
    NOT         shift, and go to state 52
    INTEGER     shift, and go to state 42
    FLOAT       shift, and go to state 43
    BOOLEAN     shift, and go to state 53
    IDENTIFIER  shift, and go to state 54
    STRING      shift, and go to state 46

    operand_expression  go to state 82
    operand_term        go to state 48


State 42

   75 operand_term: INTEGER .

    $default  reduce using rule 75 (operand_term)


State 43

   76 operand_term: FLOAT .

    $default  reduce using rule 76 (operand_term)


State 44

   77 operand_term: BOOLEAN .
   98 boolean_expression: BOOLEAN .

    RP        reduce using rule 77 (operand_term)
    RP        [reduce using rule 98 (boolean_expression)]
    MOD       reduce using rule 77 (operand_term)
    ADD       reduce using rule 77 (operand_term)
    SUB       reduce using rule 77 (operand_term)
    MUL       reduce using rule 77 (operand_term)
    DIV       reduce using rule 77 (operand_term)
    LT        reduce using rule 77 (operand_term)
    LET       reduce using rule 77 (operand_term)
    GETH      reduce using rule 77 (operand_term)
    GT        reduce using rule 77 (operand_term)
    EQ        reduce using rule 77 (operand_term)
    NEQ       reduce using rule 77 (operand_term)
    AND       reduce using rule 77 (operand_term)
    OR        reduce using rule 77 (operand_term)
    $default  reduce using rule 98 (boolean_expression)


State 45

   70 operand_term: IDENTIFIER . LP arguments RP
   71             | IDENTIFIER . LP RP
   72             | IDENTIFIER . LMB operand_expression RMB
   78             | IDENTIFIER .
   97 boolean_expression: IDENTIFIER .

    LP   shift, and go to state 83
    LMB  shift, and go to state 84

    RP        reduce using rule 78 (operand_term)
    RP        [reduce using rule 97 (boolean_expression)]
    MOD       reduce using rule 78 (operand_term)
    ADD       reduce using rule 78 (operand_term)
    SUB       reduce using rule 78 (operand_term)
    MUL       reduce using rule 78 (operand_term)
    DIV       reduce using rule 78 (operand_term)
    LT        reduce using rule 78 (operand_term)
    LET       reduce using rule 78 (operand_term)
    GETH      reduce using rule 78 (operand_term)
    GT        reduce using rule 78 (operand_term)
    EQ        reduce using rule 78 (operand_term)
    NEQ       reduce using rule 78 (operand_term)
    AND       reduce using rule 78 (operand_term)
    OR        reduce using rule 78 (operand_term)
    $default  reduce using rule 97 (boolean_expression)


State 46

   74 operand_term: STRING .

    $default  reduce using rule 74 (operand_term)


State 47

   59 operand_expression: operand_expression . OR operand_expression
   60                   | operand_expression . AND operand_expression
   62                   | operand_expression . ADD operand_expression
   63                   | operand_expression . SUB operand_expression
   64                   | operand_expression . MUL operand_expression
   65                   | operand_expression . DIV operand_expression
   66                   | operand_expression . MOD operand_expression
   88 boolean_expression: operand_expression . LT operand_expression
   89                   | operand_expression . LET operand_expression
   90                   | operand_expression . EQ operand_expression
   91                   | operand_expression . GETH operand_expression
   92                   | operand_expression . GT operand_expression
   93                   | operand_expression . NEQ operand_expression
   94                   | operand_expression . OR operand_expression
   95                   | operand_expression . AND operand_expression

    MOD   shift, and go to state 85
    ADD   shift, and go to state 86
    SUB   shift, and go to state 87
    MUL   shift, and go to state 88
    DIV   shift, and go to state 89
    LT    shift, and go to state 90
    LET   shift, and go to state 91
    GETH  shift, and go to state 92
    GT    shift, and go to state 93
    EQ    shift, and go to state 94
    NEQ   shift, and go to state 95
    AND   shift, and go to state 96
    OR    shift, and go to state 97


State 48

   58 operand_expression: operand_term .

    $default  reduce using rule 58 (operand_expression)


State 49

   84 conditional: IF boolean_expression . THEN $@6 description $@7 ELSE $@8 description END IF
   86            | IF boolean_expression . THEN $@9 description END IF

    THEN  shift, and go to state 98


State 50

  104 loop: LOOP $@10 . description END LOOP

    BYG         shift, and go to state 1
    CONST       shift, and go to state 2
    EXIT        shift, and go to state 3
    FOR         shift, and go to state 4
    GET         shift, and go to state 6
    IF          shift, and go to state 7
    LOOP        shift, and go to state 8
    PUT         shift, and go to state 9
    RESULT      shift, and go to state 11
    RETURN      shift, and go to state 12
    SKIP        shift, and go to state 13
    VAR         shift, and go to state 67
    IDENTIFIER  shift, and go to state 15

    $default  reduce using rule 99 (description)

    const_declarations     go to state 68
    variable_declarations  go to state 69
    statement_sequence     go to state 70
    statements             go to state 25
    block                  go to state 26
    simple                 go to state 27
    procedure_invocation   go to state 28
    conditional            go to state 29
    description            go to state 99
    loop                   go to state 30


State 51

   51 expressions: LP . expressions RP
   73 operand_term: LP . operand_expression RP

    LP          shift, and go to state 51
    SUB         shift, and go to state 40
    NOT         shift, and go to state 52
    INTEGER     shift, and go to state 42
    FLOAT       shift, and go to state 43
    BOOLEAN     shift, and go to state 53
    IDENTIFIER  shift, and go to state 54
    STRING      shift, and go to state 46

    expressions         go to state 100
    operand_expression  go to state 101
    operand_term        go to state 48


State 52

   61 operand_expression: NOT . operand_expression

    LP          shift, and go to state 80
    SUB         shift, and go to state 40
    NOT         shift, and go to state 52
    INTEGER     shift, and go to state 42
    FLOAT       shift, and go to state 43
    BOOLEAN     shift, and go to state 53
    IDENTIFIER  shift, and go to state 54
    STRING      shift, and go to state 46

    operand_expression  go to state 102
    operand_term        go to state 48


State 53

   77 operand_term: BOOLEAN .

    $default  reduce using rule 77 (operand_term)


State 54

   70 operand_term: IDENTIFIER . LP arguments RP
   71             | IDENTIFIER . LP RP
   72             | IDENTIFIER . LMB operand_expression RMB
   78             | IDENTIFIER .

    LP   shift, and go to state 83
    LMB  shift, and go to state 84

    $default  reduce using rule 78 (operand_term)


State 55

   43 simple: PUT expressions .

    $default  reduce using rule 43 (simple)


State 56

   50 expressions: operand_expression .
   52            | operand_expression . LT operand_expression
   53            | operand_expression . LET operand_expression
   54            | operand_expression . EQ operand_expression
   55            | operand_expression . GETH operand_expression
   56            | operand_expression . GT operand_expression
   57            | operand_expression . NEQ operand_expression
   59 operand_expression: operand_expression . OR operand_expression
   60                   | operand_expression . AND operand_expression
   62                   | operand_expression . ADD operand_expression
   63                   | operand_expression . SUB operand_expression
   64                   | operand_expression . MUL operand_expression
   65                   | operand_expression . DIV operand_expression
   66                   | operand_expression . MOD operand_expression

    MOD   shift, and go to state 85
    ADD   shift, and go to state 86
    SUB   shift, and go to state 87
    MUL   shift, and go to state 88
    DIV   shift, and go to state 89
    LT    shift, and go to state 103
    LET   shift, and go to state 104
    GETH  shift, and go to state 105
    GT    shift, and go to state 106
    EQ    shift, and go to state 107
    NEQ   shift, and go to state 108
    AND   shift, and go to state 109
    OR    shift, and go to state 110

    $default  reduce using rule 50 (expressions)


State 57

   19 procedure_declarations: PROCEDURE IDENTIFIER . LP formal_arguments RP $@3 description END IDENTIFIER
   21                       | PROCEDURE IDENTIFIER . LP RP $@4 description END IDENTIFIER

    LP  shift, and go to state 111


State 58

   45 simple: RESULT expressions .

    $default  reduce using rule 45 (simple)


State 59

   27 variable_declarations: VAR IDENTIFIER . ASSIGN const_expression
   28                      | VAR IDENTIFIER . COLON type ASSIGN const_expression
   29                      | VAR IDENTIFIER . COLON type
   30 array_declarations: VAR IDENTIFIER . COLON ARRAY INTEGER DOT DOT INTEGER OF type

    ASSIGN  shift, and go to state 112
    COLON   shift, and go to state 113


State 60

   41 simple: IDENTIFIER ASSIGN . expressions

    LP          shift, and go to state 51
    SUB         shift, and go to state 40
    NOT         shift, and go to state 52
    INTEGER     shift, and go to state 42
    FLOAT       shift, and go to state 43
    BOOLEAN     shift, and go to state 53
    IDENTIFIER  shift, and go to state 54
    STRING      shift, and go to state 46

    expressions         go to state 114
    operand_expression  go to state 56
    operand_term        go to state 48


State 61

   68 procedure_invocation: IDENTIFIER LP . arguments RP
   69                     | IDENTIFIER LP . RP

    LP          shift, and go to state 51
    RP          shift, and go to state 115
    SUB         shift, and go to state 40
    NOT         shift, and go to state 52
    INTEGER     shift, and go to state 42
    FLOAT       shift, and go to state 43
    BOOLEAN     shift, and go to state 53
    IDENTIFIER  shift, and go to state 54
    STRING      shift, and go to state 46

    expressions         go to state 116
    operand_expression  go to state 56
    operand_term        go to state 48
    arguments           go to state 117


State 62

   42 simple: IDENTIFIER LMB . expressions RMB ASSIGN expressions

    LP          shift, and go to state 51
    SUB         shift, and go to state 40
    NOT         shift, and go to state 52
    INTEGER     shift, and go to state 42
    FLOAT       shift, and go to state 43
    BOOLEAN     shift, and go to state 53
    IDENTIFIER  shift, and go to state 54
    STRING      shift, and go to state 46

    expressions         go to state 118
    operand_expression  go to state 56
    operand_term        go to state 48


State 63

    0 $accept: init $end .

    $default  accept


State 64

    3 program: declarations program .

    $default  reduce using rule 3 (program)


State 65

    4 program: statement_sequence program .

    $default  reduce using rule 4 (program)


State 66

   32 statement_sequence: statements statement_sequence .

    $default  reduce using rule 32 (statement_sequence)


State 67

   27 variable_declarations: VAR . IDENTIFIER ASSIGN const_expression
   28                      | VAR . IDENTIFIER COLON type ASSIGN const_expression
   29                      | VAR . IDENTIFIER COLON type

    IDENTIFIER  shift, and go to state 119


State 68

  100 description: const_declarations . description

    BYG         shift, and go to state 1
    CONST       shift, and go to state 2
    EXIT        shift, and go to state 3
    FOR         shift, and go to state 4
    GET         shift, and go to state 6
    IF          shift, and go to state 7
    LOOP        shift, and go to state 8
    PUT         shift, and go to state 9
    RESULT      shift, and go to state 11
    RETURN      shift, and go to state 12
    SKIP        shift, and go to state 13
    VAR         shift, and go to state 67
    IDENTIFIER  shift, and go to state 15

    $default  reduce using rule 99 (description)

    const_declarations     go to state 68
    variable_declarations  go to state 69
    statement_sequence     go to state 70
    statements             go to state 25
    block                  go to state 26
    simple                 go to state 27
    procedure_invocation   go to state 28
    conditional            go to state 29
    description            go to state 120
    loop                   go to state 30


State 69

  101 description: variable_declarations . description

    BYG         shift, and go to state 1
    CONST       shift, and go to state 2
    EXIT        shift, and go to state 3
    FOR         shift, and go to state 4
    GET         shift, and go to state 6
    IF          shift, and go to state 7
    LOOP        shift, and go to state 8
    PUT         shift, and go to state 9
    RESULT      shift, and go to state 11
    RETURN      shift, and go to state 12
    SKIP        shift, and go to state 13
    VAR         shift, and go to state 67
    IDENTIFIER  shift, and go to state 15

    $default  reduce using rule 99 (description)

    const_declarations     go to state 68
    variable_declarations  go to state 69
    statement_sequence     go to state 70
    statements             go to state 25
    block                  go to state 26
    simple                 go to state 27
    procedure_invocation   go to state 28
    conditional            go to state 29
    description            go to state 121
    loop                   go to state 30


State 70
